Fixed search input's text cursor being on wrong position

--- a/docs/static/theme.css
+++ b/docs/static/theme.css
@@ -361,7 +361,6 @@ padding: 0;
 .hdr-table .hdr-search input {
     padding-left: 5px;
     font-size: 1em;
-    line-height: 25px;
     height: 25px;
     font-family: Arial, sans-serif;
     width:210px;
